# lowfi

./: .gitignore  CHILLHOP.md  CONTRIBUTING.md  Cargo.toml  ENVIRONMENT_VARS.md  LICENSE  MUSIC.md  README.md  flake.nix
.github/workflows/: build.yml  tests.yml
data/: archive.txt  archive_lofigirl.txt  chillhop-new.txt  chillhop.txt  file.txt  lofigirl.txt  lofigirl_archive_youtube.txt  micropop.txt  noheader.txt  sample.txt  synthboy.txt  tracks.txt
data/old/: lofigirl.txt  synthboy.txt
docs/: ENVIRONMENT_VARS.md  MUSIC.md
docs/en/: ENVIRONMENT_VARS.md  MUSIC.md
docs/fr/: CONTRIBUER.md  ENVIRONMENT_VARS.md  MUSIQUE.md  README.md
media/: demo.cast
scripts/: fix_cache.sh
src/: audio.rs  bookmark.rs  dbg.rs  download.rs  downloader.rs  error.rs  main.rs  message.rs  messages.rs  mpris.rs  play.rs  player.rs  scrape.rs  scrapers.rs  tasks.rs  tests.rs  tracks.rs  ui.rs  volume.rs
src/audio/: waiter.rs
src/bandcamp/: discography.rs
src/player/: audio.rs  bookmark.rs  downloader.rs  error.rs  mpris.rs  persistent_volume.rs  queue.rs  ui.rs
src/player/ui/: art.rs  components.rs  cover.rs  input.rs
src/scrapers/: archive.rs  chillhop.rs  lofigirl.rs
src/tests/: bookmark.rs  player.rs  tracks.rs  ui.rs  volume.rs
src/tracks/: bookmark.rs  cache.rs  error.rs  format.rs  list.rs  presave.rs  utils.rs
src/ui/: components.rs  environment.rs  init.rs  input.rs  interface.rs  macos.rs  mpris.rs  task.rs  window.rs
src/ui/interface/: clock.rs  components.rs  titlebar.rs  window.rs
translations/fr/: CONTRIBUER.md  ENVIRONMENT_VARS.md  MUSIQUE.md  README.md
